...
    <string name="fridge_notice_remove">Couldn\'t remove the item</string>
    <string name="fridge_notice_undo">Couldn\'t undo the delete</string>
    <string name="fridge_notice_save">Couldn\'t save the item</string>
    <string name="fridge_notice_photo">Couldn\'t save the photo</string>
    <string name="editor_name_required">Enter a name</string>

    <string name="editor_add_title">Add to the fridge</string>
    <string name="editor_edit_title">Edit item</string>
    <string name="editor_name_label">Name</string>
    <string name="editor_quantity_label">Quantity</string>
    <string name="editor_presets_label">Premade items</string>
    <string name="editor_presets_hint">One tap fills the name and a date.</string>
    <string name="editor_presets_hint_date">One tap sets the date.</string>
    <string name="editor_expiry_label">Expiry</string>
    <string name="editor_expiry_none">No expiry</string>
    <string name="editor_expiry_choose">Choose expiry date</string>
    <string name="editor_expiry_clear">Clear expiry date</string>
    <string name="editor_photo_label">Photo</string>
    <string name="editor_photo_empty">Optional. You can keep typing without one.</string>
    <string name="editor_take_photo">Take photo</string>
    <string name="editor_pick_photo">Choose photo</string>
    <string name="editor_remove_photo">Remove photo</string>
    <string name="editor_save">Save</string>
    <string name="editor_saving">Saving</string>
    <string name="editor_delete">Remove from fridge</string>
    <string name="editor_date_confirm">Set date</string>
    <string name="editor_date_cancel">Cancel</string>
</resources>

